package gribCollectionIndex;

option java_package = "ucar.nc2.grib";
option java_outer_classname = "GribCollectionProto";

message Record {
  required uint32 fileno = 1;  // index into GribCollectionIndex.files
  required uint64 pos = 2;     // offset in Grib file of the start of drs (grib2) or entire message (grib1)
  optional bool missing = 3 [default = false]; // record is missing
}

// write VariableRecords first
message VariableRecords {
  required fixed32 cdmHash = 1; // which variable
  repeated Record records = 2;  // Record[ntimes*nvert*nens]
}

///////////////////////////////////////////////////////////////////////////

// reference VariableRecords with pos,length, for deferred access
message Variable {
  required int32 discipline = 1;  // should be uint
  required int32 category = 2;
  required int32 parameter = 3;
  required int32 levelType = 4;    // table 4.5
  optional int32 intervalType = 5 [default = -1];// table 4.10
  required fixed32 cdmHash = 6;
  required uint64 recordsPos = 7;  // offset of VariableRecords message for this Variable
  required uint32 recordsLen = 8;  // size of VariableRecords message for this Variable (could be in stream instead)
  required uint32 timeIdx = 9;     // index into GribCollectionIndex.timeCoords
  optional int32 vertIdx = 10 [default = -1]; // index into GribCollectionIndex.vertCoords
  optional int32 ensIdx = 11 [default = -1]; // index into GribCollectionIndex.ensCoords

  // only one of 12, or 13 (and 11?)
  optional int32 ensDerivedType = 12 [default = -1];             // table 4.7
  optional string probabilityName = 13;
  optional int32 probabilityType = 14  [default = -1];           // table 4.9
  optional bool isLayer = 15 [default = false];

  repeated uint32 groupno = 16;  // only for partitions
  repeated uint32 varno = 17;

  // in case different from the GribCollectionIndex
  optional uint32 tableVersion = 18;      // grib1 table Version, grib2 local

  optional string intvName = 19;
}

message Coord {
  required int32 code = 1;
  required string unit = 2;
  repeated float values = 3;
  repeated float bound = 4; // only used if interval, then = (value, bound)
}

message Parameter {  // copied from ncStream.proto
  required string name = 1;
  repeated double data = 2;
  optional string sdata = 3; // used for string data
}

message Group {
  optional int32 predefinedGds = 1;   // predefined GDS code, defined by center
  optional bytes gds = 2;             // all variables in the group use the same GDS
  repeated Variable variables = 3;    // list of variables
  repeated Coord timeCoords = 4; // list of time coordinates
  repeated Coord vertCoords = 5; // list of vert coordinates
  repeated Coord ensCoords = 6;  // list of ens coordinates
  repeated Parameter params = 7; // group attributes
  repeated int32 fileno = 8;     // this is so we can show just the component files that are in this group

  repeated TimeCoordUnion timeCoordUnions = 9; // for time partitions only
}

message TimeCoordUnion { // extends Coord
  required int32 code = 1;
  required string unit = 2;
  repeated float values = 3;
  repeated float bound = 4; // only used if interval, then = (value, bound)

  repeated int32 partition = 5; // starting index, inclusive
  repeated int32 index = 6; // ending index, exclusive
}

message Partition {
  required string name = 1;       // name is used in TDS - eg the subdirectory when generated by TimePartitionCollections
  required string filename = 2; // the gribCollection.ncx file
}

message GribCollectionIndex {
  required string name = 1;       // must be unique - index filename is name.ncx
  repeated string files = 2;      // list of grib files (could be Mfiles??)
  repeated Group groups = 3;      // separate groups for each GDS
  repeated Parameter params = 4;  // global attributes
  required int32 center = 5;      // these 4 fields are to get a GribTable object
  required int32 subcenter = 6;
  required int32 master = 7;
  required int32 local = 8;       // grib1 table Version
  optional int32 genProcessType = 10;
  optional int32 genProcessId = 11;
  optional int32 backProcessId = 12;

  repeated Partition partitions = 13;  // for time partitions only
}

//  cd c:/dev/github/thredds/grib/src/main/java
//  protoc --proto_path=. --java_out=. ucar/nc2/grib/gribCollection.proto